[package]
name = "conan-build"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Extracts linker flags from conan packages for use in build scripts"
repository = "https://github.com/Andrepuel/conan-build"
keywords = ["ffi", "conan", "build"]
categories = ["development-tools::build-utils", "development-tools::ffi"]
readme = "README.md"

[dependencies]
serde_json = "1.0"

[workspace]
members = [
    "zeromq-sys-sample",
]